--- a/src/DTL/CoolAndBedBundle/Resources/config/pageparts/left-sidebar.yml
+++ b/src/DTL/CoolAndBedBundle/Resources/config/pageparts/left-sidebar.yml
@@ -1,3 +1,4 @@
+name: "Left sidebar"
 context: "left_sidebar"
 types:
     - { name: "Header", class: "Kunstmaan\\PagePartBundle\\Entity\\HeaderPagePart" }
