Fixed logo link

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -58,3 +58,7 @@ KunstmaanTranslatorBundle:
 # KunstmaanLanguageChooserBundle
 _languagechooser:
     resource: .
+
+_imagine:
+    resource: .
+    type:     imagine
