--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "repositories" : {
         "type" : "vcs",
-        "url" : "https://github.com/dantleech/node-bundle"
+        "url" : "https://github.com/dantleech/KunstmaanNodeBundle"
     }
     "require": {
         "php": ">=5.3.3",
@@ -30,7 +30,7 @@
         "kunstmaan/form-bundle": "2.3.*",
         "kunstmaan/media-bundle": "2.3.*",
         "kunstmaan/media-pagepart-bundle": "2.3.*",
-        "kunstmaan/node-bundle": "2.3.*",
+        "kunstmaan/node-bundle@dev-reinitialize_page_from_language": "2.3.*",
         "kunstmaan/node-search-bundle": "2.3.*",
         "kunstmaan/pagepart-bundle": "2.3.*",
         "kunstmaan/search-bundle": "2.3.*",
